--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,14 @@ arch:
 python:
   - "3.7"
 
-services:
-  - docker
-
 install:
   - pip install pipenv
-  - pipenv install
+  - pipenv install --dev
 
 jobs:
   include:
     - stage: test
-      skip_cleanup: true
-      script: pipenv run; pytest
+      script: pytest --cov=xdrone --cov-fail-under=100
 
 notifications:
   email: false
