--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ antlr4-python3-runtime = "*"
 netifaces = "*"
 netaddr = "*"
 matplotlib = "*"
+tabulate = "*"
 
 [requires]
 python_version = "3.7"
